8295000: java/util/Formatter/Basic test cleanup
Backport-of: 78763fc8e0d6940f1c85ff8705733b8e6ae8e945